--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
             <div class="cta">
                 <p><b>Check me out!</b></p>
                 <ul>
-                    <li><a href="https://www.youtube.com/channel/UCVyL834ppwrhUFSeUrOBnFg/" target="_blank"><span class="yt1">Ganheso</span> <span class="yt2">Laso</span></a></li>
-                    <li><a href="https://twitter.com/GanhesoL" target="_blank">@GanhesoL</a></li>
-                    <li>ganhesolaso@gmail.com</li>
-                    <li>Ganheso Laso#2675</li>
+                    <li>ganhesoleso@gmail.com</li>
+                    <li>Ganheso Leso#6461</li>
                 </ul>
             </div>
         </div>
