--- a/css/files/index.html
+++ b/css/files/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hidden - Zek</title>
+        <link rel="icon" type="image/png" href="/images/favicon.png">
+        <link rel="stylesheet" href="../css/main.css">
 
-<head>
-    <title>The Archive</title>
-    <link rel="shortcut icon" type="image/png" href="files/favicon.png">
-    <link rel="stylesheet" href="files/style.css">
-    <style>
-        body {
-            font-family: 'Kulim Park';font-size: 22px;
-        }
-    </style>
-</head>
+        <meta name="description" content="Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.">
+        <meta name="author" content="Zekinler">
+    </head>
+    <body>
+        <div class="navbar">
+            <div class="container">
+                <a href="..">
+                    <p class="name">Zekinler</p>
+                </a>
 
-<body>
-    <img src="files/banner.png" alt="banner">
-    <h1>here's all my old stuff, including the old version of this website</h1>
-    <br>
-    <h2>Welcome to my website, here I'll host my creations.</h2>
-    <p>Manage your very own store in: <a href="store">Store Manager Simulator</a>, this "game" is in it's very early stages, so dont expect much.</p>
-    <p>The engine used in my modern projects: <a href="files/Squared Tool-Kit v2.3.0.sb3" download>Squared Tool-Kit</a>, use this in <a style="text-decoration:none;" href="https://sheeptester.github.io/scratch-gui/?width=1920&height=1080&limits=false&compatibility_mode=false&load_griffpatch=true">E羊icques</a>.</p>
-    <p>Wanted to code a 3D Rendering Engine so I did, <a href="S3DRE">Scratch 3D Rendering Engine</a>.</p>
-    <p>A simple <a style="text-decoration:none;" href="aim">aim trainer</a>.</p>
-    <p>One of the greatest projects I've worked on, <a href="pog">Pog!</a>.</p>
-    <p>As a challenge I recreated <a href="mine">Minesweeper</a>, works just like the original.</p>
-    <p>A retro-feely 3d game, no looking up or down in this because it's <a href="raycast">raycasting-based</a>.</p>
-    <p>A <a href="text">text editor</a>, you can load and save text files by pressing ctrl + s, right clicking, pressing "Import" or "Export", then pressing ctrl + s again.</p>
-    <p>A <a href="ball">Ball Physics</a> simulation.</p>
-    <p>A simple small <a href="sort">sorting visualizer</a>, this visualizes the insertion and bubble sorts.</p>
-    <p>In progress: <a href="rage">Death-Maze Escape</a>, a slippery, bouncy, top-down scrolling rage game.</p>
-    <p>In progress: <a href="color">Color</a>, a retro style platformer.</p>
-    <p style="margin-left:30px;"><a href="PS">Pitch Switch</a>.</p>
-    <p style="margin-left:30px;"><a href="CS">Creature Simulator</a>.</p>
-    <p>In progress(You cannot input anything): <a href="GVM">GVM</a>, a 32-bit virtual machine.</p>
-</body>
-
+                <nav class="pages">
+                    <ul>
+                        <li><a href="..">Home</a></li>
+                        <li class="active"><a href="../projects">Projects</a></li>
+                        <li><a href="../devlogs">Devlogs</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="content">
+            <p>A simple <a href="aim">aim trainer</a>.</p>
+            <p>A game to test your clicking reflexes; <a href="pog">Pog!</a>.</p>
+            <p>A <a href="mine">Minesweeper</a> clone, works just like the original.</p>
+            <p>A simple <a href="sort">sorting visualizer</a>, this visualizes bubble and insertion sort.</p>
+            <p><a href="rage">Death-Maze Escape</a>, a slippery, bouncy, top-down scrolling rage game.</p>
+            <p><a href="color">Color</a>, a retro style platformer.</p>
+            <p><a href="PS">Pitch Switch</a>, a rhythm game.</p>
+            <p><a href="CS">Creature Simulator</a>, interact with a simulation of creatures.</p>
+        </div>
+    </body>
 </html>
