--- a/devlogs/index.html
+++ b/devlogs/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Devlogs - Zek</title>
+        <link rel="icon" type="image/png" href="/images/favicon.png">
         <link rel="stylesheet" href="../css/main.css">
 
         <meta name="description" content="Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.">
