--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 - Zek</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="./css/main.css">
 
         <meta name="description" content="Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.">
         <meta name="author" content="Zekinler">
