--- a/projects/index.html
+++ b/projects/index.html
@@ -20,9 +20,9 @@
 
                 <nav class="pages">
                     <ul>
-                        <li><a href="..">Home</a></li>
-                        <li class="active"><a href="../projects">Projects</a></li>
-                        <li><a href="../devlogs">Devlogs</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li class="active"><a href="/projects">Projects</a></li>
+                        <li><a href="/devlogs">Devlogs</a></li>
                     </ul>
                 </nav>
             </div>
