--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 </a>
                 <nav class="pages">
                     <ul>
-                        <li class="active"><a href="">Home</a></li>
-                        <li><a href="projects">Projects</a></li>
-                        <li><a href="devlogs">Devlogs</a></li>
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/projects">Projects</a></li>
+                        <li><a href="/devlogs">Devlogs</a></li>
                     </ul>
                 </nav>
             </div>
