--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="navbar">
             <div class="container">
-                <a href="">
+                <a href="/">
                     <p class="name">Zekinler</p>
                 </a>
                 <nav class="pages">
