--- a/css/files/index.html
+++ b/css/files/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hidden - Zek</title>
-        <link rel="icon" type="image/png" href="../../images/favicon.png">
-        <link rel="stylesheet" href="../main.css">
+        <link rel="icon" type="image/png" href="/images/favicon.png">
+        <link rel="stylesheet" href="/main.css">
 
         <meta name="description" content="Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.">
         <meta name="author" content="Zekinler">
@@ -14,15 +14,15 @@
     <body>
         <div class="navbar">
             <div class="container">
-                <a href="..">
+                <a href="/">
                     <p class="name">Zekinler</p>
                 </a>
 
                 <nav class="pages">
                     <ul>
-                        <li><a href="..">Home</a></li>
-                        <li class="active"><a href="../projects">Projects</a></li>
-                        <li><a href="../devlogs">Devlogs</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li class="active"><a href="/projects">Projects</a></li>
+                        <li><a href="/devlogs">Devlogs</a></li>
                     </ul>
                 </nav>
             </div>
