--- a/css/files/index.html
+++ b/css/files/index.html
@@ -21,7 +21,7 @@
                 <nav class="pages">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li class="active"><a href="/projects">Projects</a></li>
+                        <li><a href="/projects">Projects</a></li>
                         <li><a href="/devlogs">Devlogs</a></li>
                     </ul>
                 </nav>
