--- a/404.html
+++ b/404.html
@@ -13,15 +13,15 @@
     <body>
         <div class="navbar">
             <div class="container">
-                <a href="..">
+                <a href="/">
                     <p class="name">Zekinler</p>
                 </a>
 
                 <nav class="pages">
                     <ul>
-                        <li><a href="..">Home</a></li>
-                        <li><a href="projects">Projects</a></li>
-                        <li><a href="devlogs">Devlogs</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/projects">Projects</a></li>
+                        <li><a href="/devlogs">Devlogs</a></li>
                     </ul>
                 </nav>
             </div>
