--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zek</title>
+        <title>Zekinler</title>
         <link rel="icon" type="image/png" href="/images/favicon.png">
         <link rel="stylesheet" href="/css/main.css">
 
-        <meta name="description" content="Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.">
+        <meta name="description" content="Hey, I'm Zekinler. I'm an indie dev from Michigan making games, here I'll post what I make.">
         <meta name="author" content="Zekinler">
         <meta name="keywords" content="Zekinler,programming,game making">
     </head>
@@ -28,12 +28,12 @@
             </div>
         </div>
         <div class="content">
-            <p class="intro">Hey, I'm Zek. I'm an indie dev from Michigan making games, here I'll post what I make.</p>
+            <p class="intro">Hey, I'm Zekinler. I'm an indie dev from Michigan making games, here I'll post what I make.</p>
             <div class="cta">
                 <p><b>Contact me:</b></p>
                 <ul>
                     <li>zekinler7@gmail.com</li>
-                    <li>Zekinler#7266</li>
+                    <li>DC: zekinler</li>
                 </ul>
             </div>
         </div>
